--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     </style>
     <script>
         function accionParaCuandoEllaDigaQueSi(){
-            alert('ahora ya somos nobios <3');
+            alert('ahora ya somos nobios xd <3');
         }
 
         function mueveElBoton(){
